--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "2.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -19,5 +19,11 @@
     "babel-plugin-import": "^1.8.0",
     "react-app-rewire-less": "^2.1.2",
     "react-app-rewired": "^1.5.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
